proper dark mode fix

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2,14 +2,14 @@
 
 @import "tailwindcss";
 
-@import "@seangenabe/catppuccin-tailwindcss-v4/default-mocha.css";
+@import "@catppuccin/tailwindcss/mocha.css";
 
 @plugin "@tailwindcss/typography";
 
 :root {
   --font-sans: 'Atkinson Hyperlegible Next', ui-sans-serif, system-ui, sans-serif;
   --font-mono: 'Atkinson Hyperlegible Mono', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
-  color-scheme: dark;
+  color-scheme: auto;
 }
 
 body {
@@ -24,10 +24,7 @@ body {
   stroke: var(--color-ctp-text);
 }
 
-.prose span[style*="display: block"] {
-  display: inline-block;
-  margin: 1em 0;
-}
+
 
 .prose span[style*="display: block"] svg {
   display: block;
@@ -35,15 +32,50 @@ body {
   margin-right: auto;
 }
 
-.tag-pink { color: var(--color-ctp-pink); }
-.tag-mauve { color: var(--color-ctp-mauve); }
-.tag-red { color: var(--color-ctp-red); }
-.tag-maroon { color: var(--color-ctp-maroon); }
-.tag-peach { color: var(--color-ctp-peach); }
-.tag-yellow { color: var(--color-ctp-yellow); }
-.tag-green { color: var(--color-ctp-green); }
-.tag-teal { color: var(--color-ctp-teal); }
-.tag-sky { color: var(--color-ctp-sky); }
-.tag-sapphire { color: var(--color-ctp-sapphire); }
-.tag-blue { color: var(--color-ctp-blue); }
-.tag-lavender { color: var(--color-ctp-lavender); }
+.tag-pink {
+  color: var(--color-ctp-pink);
+}
+
+.tag-mauve {
+  color: var(--color-ctp-mauve);
+}
+
+.tag-red {
+  color: var(--color-ctp-red);
+}
+
+.tag-maroon {
+  color: var(--color-ctp-maroon);
+}
+
+.tag-peach {
+  color: var(--color-ctp-peach);
+}
+
+.tag-yellow {
+  color: var(--color-ctp-yellow);
+}
+
+.tag-green {
+  color: var(--color-ctp-green);
+}
+
+.tag-teal {
+  color: var(--color-ctp-teal);
+}
+
+.tag-sky {
+  color: var(--color-ctp-sky);
+}
+
+.tag-sapphire {
+  color: var(--color-ctp-sapphire);
+}
+
+.tag-blue {
+  color: var(--color-ctp-blue);
+}
+
+.tag-lavender {
+  color: var(--color-ctp-lavender);
+}
